# llm_context_benchmarks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  0.5k.txt  128k.txt  16k.txt  1k.txt  256k.txt  2k.txt  3.6k.txt  32k.txt  4k.txt  64k.txt  8k.txt  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  apple_foundation_benchmark.py  benchmark.py  benchmark_common.py  compare_benchmarks.py  deepseek_benchmark.py  dflash_benchmark.py  docker-compose.yml  exo_benchmark.py  generate_context_files.py  grok_benchmark.py  kl_capture.py  llamacpp_benchmark.py  llamacpp_embed_benchmark.py  lmstudio_benchmark.py  mlx_benchmark.py  mlx_distributed_benchmark.py  mlx_vlm_benchmark.py  mlx_vlm_server_benchmark.py  mlxserve_benchmark.py  mtplx_benchmark.py  ollama_api_benchmark.py  (+15 more)
benchmark_ollama_api_gpt-oss_20b_20250806_223553/: benchmark_results.csv  generated_16k.txt  generated_2k.txt  generated_32k.txt  generated_4k.txt  generated_64k.txt  generated_8k.txt  hardware_info.json  table.txt  tweet.txt
benchmark_ollama_cli_gpt-oss_20b_20250806_223925/: benchmark_results.csv  generated_16k.txt  generated_2k.txt  generated_32k.txt  generated_4k.txt  generated_64k.txt  generated_8k.txt  table.txt  tweet.txt
webui_static/: app.js  charts.js  core.js  export.js  index.html  report.js  styles.css  view-compare.js  view-endpoints.js  view-results.js  view-run.js  view-tools.js
