[project]
name = "llm-context-benchmarks"
version = "0.1.0"
description = "Benchmarking tools for LLM context sizes across multiple inference engines."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "annotated-types>=0.7.0",
  "anyio>=4.11.0",
  "blobfile>=3.0.0",
  "certifi>=2025.8.3",
  "cfgv>=3.4.0",
  "charset-normalizer>=3.4.3",
  "contourpy>=1.3.3",
  "cycler>=0.12.1",
  "distlib>=0.4.0",
  "filelock>=3.19.1",
  "fonttools>=4.60.1",
  "fsspec>=2025.9.0",
  "h11>=0.16.0",
  "hf-xet>=1.1.10",
  "httpcore>=1.0.9",
  "httpx>=0.28.1",
  "huggingface-hub>=0.35.3",
  "identify>=2.6.15",
  "idna>=3.10",
  "jinja2>=3.1.6",
  "kiwisolver>=1.4.9",
  "lxml>=6.0.1",
  "markupsafe>=3.0.3",
  "matplotlib>=3.10.6",
  "mlx>=0.29.2",
  "mlx-lm>=0.30.3",
  "mlx-metal>=0.29.2",
  "nodeenv>=1.9.1",
  "numpy>=2.3.3",
  "ollama>=0.6.0",
  "openai>=1.35.0",
  "packaging>=25.0",
  "pandas>=2.3.3",
  "pillow>=11.3.0",
  "platformdirs>=4.4.0",
  "pre-commit>=4.3.0",
  "protobuf>=6.32.1",
  "psutil>=7.1.0",
  "pycryptodomex>=3.23.0",
  "pydantic>=2.11.10",
  "pydantic-core>=2.33.2",
  "pyparsing>=3.2.5",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.2",
  "pyyaml>=6.0.3",
  "regex>=2025.9.18",
  "requests>=2.32.5",
  "safetensors>=0.6.2",
  "six>=1.17.0",
  "sniffio>=1.3.1",
  "tiktoken>=0.11.0",
  "tokenizers>=0.22.1",
  "tqdm>=4.67.1",
  "transformers==5.0.0rc1",
  "typing-extensions>=4.15.0",
  "typing-inspection>=0.4.2",
  "tzdata>=2025.2",
  "urllib3>=2.5.0",
  "virtualenv>=20.34.0",
]

[project.scripts]
benchmark = "benchmark:main"
compare-benchmarks = "compare_benchmarks:main"
generate-context-files = "generate_context_files:main"
ollama-api-benchmark = "ollama_api_benchmark:main"
ollama-cli-benchmark = "ollama_cli_benchmark:main"
mlx-benchmark = "mlx_benchmark:main"
llamacpp-benchmark = "llamacpp_benchmark:main"
lmstudio-benchmark = "lmstudio_benchmark:main"
exo-benchmark = "exo_benchmark:main"
deepseek-benchmark = "deepseek_benchmark:main"
grok-benchmark = "grok_benchmark:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = [
  "benchmark",
  "benchmark_common",
  "compare_benchmarks",
  "deepseek_benchmark",
  "exo_benchmark",
  "generate_context_files",
  "grok_benchmark",
  "llamacpp_benchmark",
  "lmstudio_benchmark",
  "mlx_benchmark",
  "ollama_api_benchmark",
  "ollama_cli_benchmark",
]
