[project]
name = "llm-context-benchmarks"
version = "0.1.0"
description = "Benchmarking tools for LLM context sizes across multiple inference engines."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "annotated-types>=0.7.0",
  "anyio>=4.13.0",
  "blobfile>=3.2.0",
  "certifi>=2026.4.22",
  "cfgv>=3.5.0",
  "charset-normalizer>=3.4.7",
  "contourpy>=1.3.3",
  "cycler>=0.12.1",
  "datasets>=4.8.5",
  "distlib>=0.4.0",
  "filelock>=3.29.0",
  "fonttools>=4.62.1",
  "fsspec>=2026.2.0",
  "h11>=0.16.0",
  "hf-xet>=1.4.3",
  "httpcore>=1.0.9",
  "httpx>=0.28.1",
  "huggingface-hub>=1.12.2",
  "identify>=2.6.19",
  "idna>=3.13",
  "jinja2>=3.1.6",
  "kiwisolver>=1.5.0",
  "lxml>=6.1.0",
  "markupsafe>=3.0.3",
  "matplotlib>=3.10.9",
  "mlx>=0.31.2",
  "mlx-lm>=0.31.3",
  "mlx-vlm>=0.4.4",
  "mlx-metal>=0.31.2",
  "nodeenv>=1.10.0",
  "numpy>=2.4.4",
  "ollama>=0.6.2",
  "openai>=2.33.0",
  "packaging>=26.2",
  "pandas>=3.0.2",
  "pillow>=12.2.0",
  "platformdirs>=4.9.6",
  "pre-commit>=4.6.0",
  "protobuf>=7.34.1",
  "psutil>=7.2.2",
  "pycryptodomex>=3.23.0",
  "pydantic>=2.13.3",
  "pydantic-core>=2.46.3",
  "pyparsing>=3.3.2",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2026.1.post1",
  "pyyaml>=6.0.3",
  "regex>=2026.4.4",
  "requests>=2.33.1",
  "safetensors>=0.7.0",
  "six>=1.17.0",
  "sniffio>=1.3.1",
  "tiktoken>=0.12.0",
  "tokenizers>=0.22.2",
  "tqdm>=4.67.3",
  "transformers>=5.7.0",
  "typing-extensions>=4.15.0",
  "typing-inspection>=0.4.2",
  "tzdata>=2026.2",
  "urllib3>=2.6.3",
  "virtualenv>=21.3.0",
  "torchvision>=0.26.0",
]

[project.scripts]
benchmark = "benchmark:main"
compare-benchmarks = "compare_benchmarks:main"
generate-context-files = "generate_context_files:main"
ollama-api-benchmark = "ollama_api_benchmark:main"
ollama-cli-benchmark = "ollama_cli_benchmark:main"
mlx-benchmark = "mlx_benchmark:main"
mlx-vlm-benchmark = "mlx_vlm_benchmark:main"
mlx-distributed-benchmark = "mlx_distributed_benchmark:main"
llamacpp-benchmark = "llamacpp_benchmark:main"
lmstudio-benchmark = "lmstudio_benchmark:main"
exo-benchmark = "exo_benchmark:main"
deepseek-benchmark = "deepseek_benchmark:main"
grok-benchmark = "grok_benchmark:main"
openai-benchmark = "openai_benchmark:main"
omlx-benchmark = "omlx_benchmark:main"
vmlx-benchmark = "vmlx_benchmark:main"
regen-charts = "regen_charts:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = [
  "benchmark",
  "benchmark_common",
  "compare_benchmarks",
  "deepseek_benchmark",
  "exo_benchmark",
  "generate_context_files",
  "grok_benchmark",
  "kl_capture",
  "llamacpp_benchmark",
  "lmstudio_benchmark",
  "mlx_benchmark",
  "mlx_vlm_benchmark",
  "mlx_distributed_benchmark",
  "ollama_api_benchmark",
  "ollama_cli_benchmark",
  "openai_benchmark",
  "omlx_benchmark",
  "vmlx_benchmark",
  "regen_charts",
  "paroquant_benchmark",
  "vllm_benchmark",
]
